--- a/signin.html
+++ b/signin.html
@@ -203,8 +203,10 @@
         <div class="sign-in-container">
             <form class="sign-in-form" action="">
                 <div class="input-fields">
-                    <input type="text" class="username-input" placeholder="Username or email address">
-                    <input type="password" class="password-input" placeholder="Password">
+                    <label for="username-input">Username or email address:</label>
+                    <input type="text" class="username-input" id="username-input" name="username-input" placeholder="Username or email address">
+                    <label for="password-input">Password:</label>
+                    <input type="password" class="password-input" id="password-input" name="password-input" placeholder="Password">
                 </div>
                 <div class="sign-in-buttons">
                     <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
