--- a/register.html
+++ b/register.html
@@ -25,15 +25,18 @@
 
         <nav class="desktop-menu" id="desktop-menu">
             <div class="desktop-social-links">
-                <a href="https://www.instagram.com/theaerialartshub/" target="_blank"><img class="desktop-social-icon" src="assets/instagram.svg" alt="Instagram profile"></a>
-                <a href="https://theaerialartshub.substack.com/" target="_blank"><img class="desktop-social-icon" src="assets/substack.png" alt="Substack newsletter"></a>
-                <a href="mailto:yaiza@theaerialartshub.com" target="_blank"><img class="desktop-social-icon" src="assets/email-outline.svg" alt="Send an email"></a>
+                <a href="https://www.instagram.com/theaerialartshub/" target="_blank"><img class="desktop-social-icon"
+                        src="assets/instagram.svg" alt="Instagram profile"></a>
+                <a href="https://theaerialartshub.substack.com/" target="_blank"><img class="desktop-social-icon"
+                        src="assets/substack.png" alt="Substack newsletter"></a>
+                <a href="mailto:yaiza@theaerialartshub.com" target="_blank"><img class="desktop-social-icon"
+                        src="assets/email-outline.svg" alt="Send an email"></a>
             </div>
             <div class="desktop-nav-search-items">
                 <input type="search" class="search-bar" id="desktop-search-bar" placeholder="Search...">
                 <img src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search icon">
             </div>
-            
+
             <ul class="nav-links">
                 <li class="nav-item-div">
                     <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
@@ -191,9 +194,12 @@
                 </div>
             </div>
             <div class="nav-social-links">
-                <a href="https://www.instagram.com/theaerialartshub/" target="_blank"><img class="nav-social-icon" src="assets/instagram.svg" alt="Instagram profile"></a>
-                <a href="https://theaerialartshub.substack.com/" target="_blank"><img class="nav-social-icon" src="assets/substack.png" alt="Substack newsletter"></a>
-                <a href="mailto:yaiza@theaerialartshub.com" target="_blank"><img class="nav-social-icon" src="assets/email-outline.svg" alt="Send an email"></a>
+                <a href="https://www.instagram.com/theaerialartshub/" target="_blank"><img class="nav-social-icon"
+                        src="assets/instagram.svg" alt="Instagram profile"></a>
+                <a href="https://theaerialartshub.substack.com/" target="_blank"><img class="nav-social-icon"
+                        src="assets/substack.png" alt="Substack newsletter"></a>
+                <a href="mailto:yaiza@theaerialartshub.com" target="_blank"><img class="nav-social-icon"
+                        src="assets/email-outline.svg" alt="Send an email"></a>
             </div>
         </nav>
 
@@ -203,14 +209,25 @@
         <div class="sign-in-container">
             <form class="sign-in-form" action="">
                 <div class="input-fields">
-                    <label for="username-input">Username:</label>
-                    <input type="text" class="username-input" id="username-input" name="username-input" placeholder="Username">
-                    <label for="email-input">Email address:</label>
-                    <input type="email" class="email-input" name="email-input" placeholder="Email address">
-                    <label for="password-input">Password:</label>
-                    <input type="password" class="password-input" id="password-input" name="password-input" placeholder="Password">
-                    <label for="password-repeat">Repeat password:</label>
-                    <input type="password" class="password-repeat" id="password-repeat" name="password-repeat" placeholder="Repeat password">
+                    <div class="label-and-input">
+                        <label for="username-input">Username:</label>
+                        <input type="text" class="username-input" id="username-input" name="username-input"
+                            placeholder="Username">
+                    </div>
+                    <div class="label-and-input">
+                        <label for="email-input">Email address:</label>
+                        <input type="email" class="email-input" name="email-input" placeholder="Email address">
+                    </div>
+                    <div class="label-and-input">
+                        <label for="password-input">Password:</label>
+                        <input type="password" class="password-input" id="password-input" name="password-input"
+                            placeholder="Password">
+                    </div>
+                    <div class="label-and-input">
+                        <label for="password-repeat">Repeat password:</label>
+                        <input type="password" class="password-repeat" id="password-repeat" name="password-repeat"
+                            placeholder="Repeat password">
+                    </div>
                 </div>
                 <div class="sign-in-buttons">
                     <a href="register.html" aria-label="Register" class="register-btn">Register</a>
@@ -227,7 +244,8 @@
             <p class="footer-link"><a href="about.html" aria-label="About page">About</a></p>
             <p class="footer-link"><a href="signin.html" aria-label="Sign in">Sign in</a></p>
         </div>
-        <a href="#header" aria-label="Back to top"><img class="arrow-up" src="assets/chevron-up.svg" alt="Back to the top"></a>
+        <a href="#header" aria-label="Back to top"><img class="arrow-up" src="assets/chevron-up.svg"
+                alt="Back to the top"></a>
     </footer>
 
     <script src="script.js"></script>
