Adjust sign in and register pages layout

--- a/register.html
+++ b/register.html
@@ -238,7 +238,7 @@
         </div>
     </main>
 
-    <footer class="sign-in-footer" id="sign-in-footer">
+    <footer>
         <div class="footer-links-group">
             <p class="footer-link"><a href="#header" aria-label="Back to top">Home</a></p>
             <p class="footer-link"><a href="about.html" aria-label="About page">About</a></p>
