--- a/signin.html
+++ b/signin.html
@@ -229,7 +229,7 @@
         </div>
     </main>
 
-    <footer class="sign-in-footer" id="sign-in-footer">
+    <footer>
         <div class="footer-links-group">
             <p class="footer-link"><a href="index.html" aria-label="Home page">Home</a></p>
             <p class="footer-link"><a href="about.html" aria-label="About page">About</a></p>
