Change h3 to h2 tags

--- a/index.html
+++ b/index.html
@@ -877,10 +877,10 @@
                 <p class="map-text-top">Explore our map of aerial and pole studios around the world, with more than
                     2,000 studios marked in total across all continents!
                 </p>
-                <h5 class="map-text-bottom">Know of any missing studios? Reach out on <a
+                <p class="map-text-bottom">Know of any missing studios? Reach out on <a
                         href="https://www.instagram.com/theaerialartshub/" target="_blank" class="text-link"
                         aria-label="Instagram account">Instagram</a> to get them added to the map.
-                </h5>
+                </p>
             </div>
         </section>
 
