Add disclaimer and contact to about page

--- a/about.html
+++ b/about.html
@@ -208,9 +208,20 @@
             <p class="about-p">The Aerial Arts Hub is a platform for the aerial and pole community
                 to discover studios, coaches, performers, brands, and other useful resources all over the world.
                 It was created with the aim to be up-to-date, inclusive, accessible, and completely free.
-            <p class="about-p">This platform is a project by self-taught newbie developer and hobby aerialist Yaiza
-                Canopoli.</p>
             </p>
+            <p class="about-p">Disclaimer: If you use the platform, please be aware that featured studios, brands and events are not
+                inherently endorsed but merely showcased. Before signing up for or making a purchase from any of the featured
+                entities, please do your own research!
+            </p>
+
+            <h2 class="about-h2">Get in touch</h2>
+            <p class="about-p">You can reach out with questions, feedback or contributions to
+                <a href="mailto:yaiza@theaerialartshub.com" target="_blank" class="text-link"
+                aria-label="Send an email">yaiza@theaerialartshub.com</a> or get in touch via
+                <a href="https://www.instagram.com/theaerialartshub/" target="_blank" class="text-link"
+                aria-label="Instagram account">Instagram</a>.
+            </p>
+
             <h2 class="about-h2">Follow our journey</h2>
             <p class="about-p">The Aerial Arts Hub is a passion project of amateur aerialist and self-taught
                 developer Yaiza Canopoli. She has been chronicling her journey developing it in a
